fixed spacing error in css

--- a/css/main.css
+++ b/css/main.css
@@ -7,10 +7,22 @@ section {
   background-color: #fff;
 }
 
-.quarter {
-  padding-right: 1rem;
-}
-
 button {
   background-color: #000;
+}
+
+h1 {
+  border-bottom: 1px solid;
+}
+
+@media only screen and (min-width: 60em) {
+
+  .space-right {
+   padding-right: .5rem;
+  }
+
+  .space-left {
+    padding-left: .5rem;
+  }
+
 }
